# scholarmis-apps

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/scholarmis/apps/: admin.py  apps.py  context_processors.py  installer.py  models.py  tasks.py
src/scholarmis/apps/api/: filters.py  serializers.py  urls.py  views.py
src/scholarmis/apps/celery/: tasks.yml
src/scholarmis/apps/migrations/: 0001_initial.py
src/scholarmis/apps/templatetags/: app_tags.py
